enhanced and fixed some features